--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 1.125rem;
-  line-height: 122%;
+  line-height: 1.22em;
   text-align: center;
   max-width: 360px;
 }
@@ -13,6 +13,6 @@
   .cover__subtitle {
     max-width: 288px;
     font-size: 0.875rem;
-    line-height: 114%;
+    line-height: 1.14em;
   }
 }
