--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,39 +1,31 @@
 .cover {
+  border: 1px solid red;
   font-family: "Inter", Arial, sans-serif;
   margin: 0;
   padding: 0;
-  aspect-ratio: 8/5;
   background: url(../../images/trainz.png) center;
   background-size: cover;
-  min-height: 740px;
+  align-self: center;
+  max-width: 100%;
+  aspect-ratio: 8/5;
+  display: grid;
+  grid-template-columns: 1184px;
 }
 
-@media (max-width: 1190px) {
+ @media (max-width: 1024px) {
   .cover {
-    min-height: 640px;
+    grid-template-columns: 1024px;
   }
 }
 
-@media (max-width: 950px) {
+@media (max-width: 768px) {
   .cover {
-    min-height: 480px;
+    grid-template-columns: 768px;
   }
 }
 
-@media (max-width: 732px) {
+@media (max-width: 320px) {
   .cover {
-    min-height: 300px;
-  }
-}
-
-@media (max-width: 565px) {
-  .cover {
-    min-height: 250px;
-  }
-}
-
-@media (max-width: 400px) {
-  .cover {
-    min-height: 200px;
+    grid-template-columns: 320px;
   }
 }
