--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,4 +1,5 @@
 .main {
+  border: 1px double blue;
   display: grid;
   justify-content: center;
   gap: 92px;
